load trained model and predict

--- a/amtcnt_notebook.ipynb
+++ b/amtcnt_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6WQed/MRgZ67GrCjkJOTM",
+      "authorship_tag": "ABX9TyNzEKR2oyCutqV1GjH81xnw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -593,6 +593,190 @@
       "cell_type": "code",
       "metadata": {
         "id": "KzApYJ7Z4Qs2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import keras\n",
+        "loadmodel=keras.models.load_model('trained_amtcnt_model')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0BiZK0Mj5Ppr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "outputId": "430c87bf-8c77-471a-f39f-58ba9749acb7"
+      },
+      "source": [
+        "print(loadmodel.summary())"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_2\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense_4 (Dense)              (None, 4)                 12        \n",
+            "_________________________________________________________________\n",
+            "dense_5 (Dense)              (None, 2)                 10        \n",
+            "_________________________________________________________________\n",
+            "dense_6 (Dense)              (None, 1)                 3         \n",
+            "=================================================================\n",
+            "Total params: 25\n",
+            "Trainable params: 25\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m3eW_7QV5hUP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "41caf5bf-ebdc-4ce2-edad-ca1756e73537"
+      },
+      "source": [
+        "print(loadmodel)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<keras.engine.sequential.Sequential object at 0x7f107017e898>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GeZgAH5M5uih",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        },
+        "outputId": "18238757-1d66-4afd-f273-c6c70cfb2d0e"
+      },
+      "source": [
+        "print(loadmodel.get_weights())"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[array([[-0.00555115,  0.02673546, -0.5371093 ,  0.03086262],\n",
+            "       [ 2.1788213 ,  0.81906337,  0.09427962, -1.7143377 ]],\n",
+            "      dtype=float32), array([-6.642131  , -6.1886654 , -0.10571356, -6.433525  ], dtype=float32), array([[ 4.3888435 , -0.7323768 ],\n",
+            "       [ 1.0935211 , -0.75840497],\n",
+            "       [-0.5619241 , -0.6052542 ],\n",
+            "       [ 0.5080697 , -0.05766988]], dtype=float32), array([-7.7336802,  0.       ], dtype=float32), array([[ 1.9017136 ],\n",
+            "       [-0.12288773]], dtype=float32), array([-8.529557], dtype=float32)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pleWRMwr5xzm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "1478535f-1eb8-442b-81c4-c394ae061023"
+      },
+      "source": [
+        "predict_out=loadmodel.predict(predict_arr)\n",
+        "print(predict_out)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[9.8049474e-01]\n",
+            " [1.0000000e+00]\n",
+            " [1.0000000e+00]\n",
+            " [1.9750340e-04]\n",
+            " [4.0753162e-01]\n",
+            " [9.9999893e-01]\n",
+            " [1.0000000e+00]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9xfnVOjp53U1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "d623bb6d-1239-45e7-c21e-f8814c74da2c"
+      },
+      "source": [
+        "[print(str(round(i[0]))) for i in predict_out]"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "0.0\n",
+            "0.0\n",
+            "1.0\n",
+            "1.0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[None, None, None, None, None, None, None]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pTP8NAXt6NqX",
         "colab_type": "code",
         "colab": {}
       },
